# investment-data-scraping

./: .gitignore  README.md  pyproject.toml  requirements.txt
scraper/: Dockerfile  Makefile  enrich_company.py  pyproject.toml  requirements.txt  run.py  run_beam.py  scrape_company.py  scrape_portfolio.py  settings.py  test.py  upload.py
scraper/scraper/: company.py  enrich_company.py  scrape_company.py  scrape_portfolio.py  upload.py
