[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.7.1"
scrapy-selenium = "^0.0.7"
beautifulsoup4 = "^4.11.1"
google-cloud-storage = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
