[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
beautifulsoup4 = "^4.11.1"
google-cloud-storage = "^2.6.0"
selenium = "^4.6.0"
tqdm = "^4.64.1"
lxml = "4.8.0"
setuptools = "^65.6.3"
apache-beam = "^2.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
